--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -1,6 +1,8 @@
 ext {
     // Kotlin
+    kotlinXVersion = "1.3.8"
     kotlinDependency = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    kotlinXCoroutine = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinXVersion"
 
     // AndroidX
     androidXVersion1_1_3 = "1.1.3"
@@ -11,7 +13,10 @@ ext {
             appCompat             : "androidx.appcompat:appcompat:$androidXVersion1_2_0",
             KTX                   : "androidx.core:core-ktx:$androidXVersion1_3_1",
             constraintLayout      : "androidx.constraintlayout:constraintlayout:$androidXVersion1_1_3",
-            lifecycleExtension    : "androidx.lifecycle:lifecycle-extensions:$androidXVersion2_2_0"
+            lifecycleExtension    : "androidx.lifecycle:lifecycle-extensions:$androidXVersion2_2_0",
+            lifecycleLiveData     : "androidx.lifecycle:lifecycle-livedata-ktx:$androidXVersion2_2_0",
+            lifecycleRuntime      : "androidx.lifecycle:lifecycle-runtime-ktx:$androidXVersion2_2_0",
+            lifecycleViewModel    : "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidXVersion2_2_0"
     ]
 
     // Google Material
@@ -42,6 +47,14 @@ ext {
             retrofit                   : "com.squareup.retrofit2:retrofit:$retrofitVersion",
             converterGson              : "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     ]
+
+    // Retrofit Call To LiveData Adapter
+    retrofitCallToLiveDataAdapterVersion = "1.1.2"
+    retrofitCallToLiveDataAdapterDependency = "com.github.leonardoxh:retrofit2-livedata-adapter:$retrofitCallToLiveDataAdapterVersion"
+
+    // OkHttp
+    okHttpVersion = "4.8.1"
+    okHttpDependency = "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
 
     // Room
     roomVersion = "2.2.5"
