--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,11 @@
          location permissions for the "MyLocation" functionality.
     -->
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
   <application
+      android:name=".CartrackApplication"
       android:allowBackup="true"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
@@ -17,26 +20,36 @@
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
 
-    <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
     <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="@string/google_maps_key" />
+        android:value="@string/GOOGLE_MAPS_KEY" />
 
-    <activity
-        android:name=".MapsActivity"
-        android:label="@string/title_activity_maps">
+    <activity android:name=".ui.splash.SplashActivity"
+        android:screenOrientation="portrait">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
-
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
+    </activity>
+
+    <activity
+        android:name=".ui.login.LoginActivity"
+        android:screenOrientation="portrait">
+    </activity>
+
+    <activity
+        android:name=".ui.maps.MapsActivity"
+        android:screenOrientation="portrait">
+    </activity>
+
+    <activity
+        android:name=".ui.users.UsersActivity"
+        android:screenOrientation="portrait">
+    </activity>
+
+    <activity
+        android:name=".ui.details.DetailsActivity"
+        android:screenOrientation="portrait">
     </activity>
   </application>
 
