--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
   <application
       android:name=".CartrackApplication"
       android:allowBackup="true"
-      android:icon="@mipmap/ic_launcher"
+      android:icon="@mipmap/cartrack_logo_orange"
       android:label="@string/app_name"
-      android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
 
@@ -25,7 +24,21 @@
         android:value="@string/GOOGLE_MAPS_KEY" />
 
     <activity android:name=".ui.splash.SplashActivity"
-        android:screenOrientation="portrait">
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar">
+
+    </activity>
+
+    <activity
+        android:name=".ui.login.LoginActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar">
+    </activity>
+
+    <activity
+        android:name=".ui.signin.SignInActivity"
+        android:screenOrientation="portrait"
+        android:theme="@style/Theme.AppCompat.Translucent">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
@@ -33,13 +46,9 @@
     </activity>
 
     <activity
-        android:name=".ui.login.LoginActivity"
-        android:screenOrientation="portrait">
-    </activity>
-
-    <activity
         android:name=".ui.maps.MapsActivity"
-        android:screenOrientation="portrait">
+        android:screenOrientation="portrait"
+        android:theme="@style/AppTheme.NoActionBar">
     </activity>
 
     <activity
