--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,18 +25,6 @@ android {
   }
 
   signingConfigs {
-    debug {
-      storeFile file('keystore/debug.keystore')
-      storePassword 'android'
-      keyAlias 'androiddebugkey'
-      keyPassword 'android'
-    }
-    staging {
-      storeFile file('keystore/debug.keystore')
-      storePassword 'android'
-      keyAlias 'androiddebugkey'
-      keyPassword 'android'
-    }
     release {
       storeFile file('keystore/release.keystore')
       storePassword 'android'
@@ -59,7 +47,6 @@ android {
       debuggable true
       minifyEnabled false
       zipAlignEnabled false
-      signingConfig signingConfigs.staging
       manifestPlaceholders = [enableCrashReporting: "true"]
       buildConfigField "String", "BASE_APP_URL", STAGE_BASE_APP_URL
       resValue "string", "GOOGLE_MAPS_KEY", secretkeyProperties['STAGE_GOOGLE_MAPS_KEY']
@@ -85,7 +72,7 @@ android {
               'src/main/res/layouts/users',
               'src/main/res/layouts/maps',
               'src/main/res/layouts/signin',
-              'src/main/res/layouts/login',
+              'src/main/res/layouts/startupmenu',
               'src/main/res/layouts/splash',
               'src/main/res/layouts',
 
@@ -93,7 +80,9 @@ android {
               'src/main/res/drawable/users',
               'src/main/res/drawable/maps',
               'src/main/res/drawable/signin',
-              'src/main/res/drawable/login',
+              'src/main/res/drawable/startupmenu',
+              'src/main/res/drawable/splash',
+              'src/main/res/drawable',
 
               'src/main/res/layout',
               'src/main/res'
@@ -127,6 +116,7 @@ dependencies {
   // AndroidX
   implementation androidXDependencies.appCompat
   implementation androidXDependencies.KTX
+  implementation 'androidx.cardview:cardview:1.0.0'
   implementation androidXDependencies.constraintLayout
   implementation androidXDependencies.lifecycleExtension
   implementation androidXDependencies.lifecycleLiveData
@@ -157,7 +147,8 @@ dependencies {
 
   // Room
   implementation roomDependencies.roomRuntime
-  annotationProcessor roomDependencies.roomCompiler
+  implementation roomDependencies.roomKTX
+  kapt roomDependencies.roomCompiler
 
   // Dagger
   implementation daggerDependencies.dagger
