--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,14 @@
     <activity android:name=".ui.splash.SplashActivity"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme.NoActionBar">
-
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
     </activity>
 
     <activity
-        android:name=".ui.login.LoginActivity"
+        android:name=".ui.startupmenu.StartUpMenuActivity"
         android:screenOrientation="portrait"
         android:theme="@style/AppTheme.NoActionBar">
     </activity>
@@ -39,10 +42,6 @@
         android:name=".ui.signin.SignInActivity"
         android:screenOrientation="portrait"
         android:theme="@style/Theme.AppCompat.Translucent">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>
     </activity>
 
     <activity
